<resources>
    <string name="app_name">Fixit</string>
    <string name="textview_username">Enter a username</string>
    <string name="edittext_usernameinput_hint">Name</string>
    <string name="btn_login">Login</string>
    <string name="toast_success">Successful</string>
    <string name="toast_error_usernamespecialchar">Invalid username, use letters and numbers only</string>
    <string name="toast_error_usernamelength">Your username must be between 4 and 30 characters</string>
    <string name="toast_error_usernamealreadyexists">Username already exists, please try another</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_mylocation">Continue</string>
    <string name="create_post_description">Description:</string>
    <string name="create_post_description_hint">Describe the reported issue...</string>
    <string name="create_post_image">Upload image</string>
    <string name="create_post_location">Set location</string>
    <string name="create_post_location_chosen">Location chosen!</string>
    <string name="create_post_location_has_been_set">Location has been set</string>
    <string name="create_post_fixit">Fixit!</string>
    <string name="create_post_Cancel">Cancel</string>
    <string name="create_post_screen_title">Create new issue post</string>
    <string name="create_post_successful">Post successfully created.</string>
    <string name="create_post_failed_too_shortlong">Description must be between 10 and 200 characters.</string>
    <string name="create_post_location_error">Choose a location.</string>
    <string name="create_reward_name">Reward:</string>
    <string name="create_reward_name_hint">Name the reward...</string>
    <string name="create_reward_price">Price:</string>
    <string name="create_reward_price_hint">Price the reward...</string>
    <string name="create_reward_image">Upload image</string>
    <string name="create_reward_submit">Submit reward</string>
    <string name="create_reward_Cancel">Cancel</string>
    <string name="create_reward_screen_title">Create new reward</string>
    <string name="create_reward_successful">Reward successfully created.</string>
    <string name="create_reward_price_not_integer">Price must be a number between 1 and 99999</string>
    <string name="create_reward_failed_too_shortlong">Name must be between 4 and 100 characters.</string>
    <string name="upvote_own_post_not_allowed">You cannot like your own post.</string>
    <string name="title_activity_navigation">Map</string>
    <string name="navigation_btn_goback">Go back</string>
    <string name="navigation_wait">Loading location takes some seconds.</string>
    <string name="reward_buy_cooldown">You are on a cooldown. You can buy this item at %1$s</string>
    <string name="reward_buy_not_enough_points">You don\'t have enough points.</string>
    <string name="reward_buy_successful">Thanks for your purchase! You have %1$s points left.</string>
    <string name="post_display_no_image">There is no image to display.</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="send_in">Send in</string>
    <string name="cancel">Cancel</string>
    <string name="mark_as_duplicate">Mark as duplicate</string>
    <string name="report_this_post">Report this post</string>
    <string name="mark_as_duplicate_success">Thank you for keeping Fixit tidy!</string>
    <string name="mark_as_duplicate_fail">You have already marked this post as a duplicate.</string>
    <string name="report_this_post_success">Thank you for your report!</string>
    <string name="report_this_post_fail">You have already reported this post.</string>
    <string name="loading_5_more">Loading 5 more posts</string>
    <string name="Tap_the_map">Tap the map to set position</string>
</resources>
