<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nasib.fixit.CreatePostActivity">

    <TextView
        android:id="@+id/descriptionTextViewCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:text="@string/create_post_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/create_post_description" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
        android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/create_post_description_hint"
        android:inputType="textMultiLine"
        android:lines="6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextViewCreatePost" />

    <Button
        android:id="@+id/uploadImageButtonCreatePost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
        android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
        android:layout_marginTop="16dp"
        android:text="@string/create_post_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <Button
        android:id="@+id/locationButtonCreatePost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
        android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
        android:layout_marginTop="16dp"
        android:text="@string/create_post_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageButtonCreatePost" />

    <Button
        android:id="@+id/fixitButtonCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post_fixit"
        app:layout_constraintRight_toLeftOf="@+id/cancelButtonCreatePost"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/locationButtonCreatePost" />

    <Button
        android:id="@+id/cancelButtonCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post_Cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fixitButtonCreatePost"
        android:layout_marginTop="102dp"
        app:layout_constraintTop_toBottomOf="@+id/locationButtonCreatePost" />
</android.support.constraint.ConstraintLayout>
